--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,7 +1,10 @@
 name: Dependabot auto merge
 
 on:
-  pull_request:
+  workflow_run:
+    workflows: [CI]
+    types:
+      - completed
 
 jobs:
   dependabot-auto-merge:
