--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -2,7 +2,8 @@ name: Dependabot auto merge
 
 on:
   workflow_run:
-    workflows: [CI]
+    workflows:
+      - CI
     types:
       - completed
 
