--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -18,3 +18,4 @@ jobs:
       - uses: fastify/github-action-merge-dependabot@v3
         with:
           target: minor
+          use-github-auto-merge: true
