--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,11 +1,7 @@
 name: Dependabot auto merge
 
 on:
-  workflow_run:
-    workflows:
-      - CI
-    types:
-      - completed
+  pull_request:
 
 jobs:
   dependabot-auto-merge:
