--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   ],
   "scripts": {
     "build": "rimraf ./dist && tsc -p tsconfig.build.json",
-    "test": "vitest --config ./vitest.config.mts --dir ./src",
+    "test": "vitest --config ./vitest.config.mts",
     "tag": "node ./scripts/tag.js",
     "preversion": "npm run prepare",
     "version": "git add package.json",
     "postversion": "git push && git push --tags",
-    "prepare": "npx simple-git-hooks && npm run source:check && npm run test -- --watch=false && npm run build",
+    "prepare": "npx simple-git-hooks && npm run source:check && npm run test -- --run && npm run build",
     "prettier:check": "prettier . --check",
     "prettier:fix": "npm run prettier:check -- --write",
     "type:check": "tsc --noEmit",
@@ -34,20 +34,15 @@
   "license": "ISC",
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
-    "@tsconfig/node18": "^18.2.4",
+    "@tsconfig/node20": "^20.1.4",
     "@vitest/coverage-v8": "^2.1.3",
-    "ava": "^6.1.3",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.6.3",
-    "vitest": "^2.0.4"
+    "vitest": "^2.0.2"
   },
   "simple-git-hooks": {
-    "pre-commit": "npm run source:check && npm test -- --run"
-  },
-  "dependencies": {
-    "debounce": "^2.2.0",
-    "lodash": "^4.17.21"
+    "pre-commit": "npm run prepare"
   }
 }
