--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,17 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
+  "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
     "noErrorTruncation": true,
-    "noUncheckedIndexedAccess": true
+    "isolatedModules": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    // Enable once migrated to type module
+    // "verbatimModuleSyntax": true,
+
+    /* Strictness */
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true
   },
   "exclude": ["./dist"]
 }
